<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/options_01"
        android:title="@string/options_01"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_02"
        android:title="@string/options_02"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_03"
        android:title="@string/options_03"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_04"
        android:title="@string/options_04"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_05"
        android:title="@string/options_05"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_06"
        android:title="@string/options_06"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/options_07"
        android:title="@string/options_07"
        app:showAsAction="never">
    </item>


</menu>