<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library_background_add_books"
    tools:context=".inventory.AddBooksFragment">


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_url_slot" />

    <TextView
        android:id="@+id/inventory_add_book_name_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_add_book_name_topic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_name_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_topic" />

    <TextView
        android:id="@+id/inventory_add_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_add_topic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_name_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inventory_add_book_price_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_add_book_price_topic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_price_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_name_slot" />

    <EditText
        android:id="@+id/inventory_add_book_price_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inventory_add_book_price_slot"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_url_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_price_topic" />

    <TextView
        android:id="@+id/inventory_add_book_url_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_add_book_url_topic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_url_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_price_slot" />

    <EditText
        android:id="@+id/inventory_add_book_url_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inventory_add_book_url_slot"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_url_topic" />

    <EditText
        android:id="@+id/inventory_add_book_name_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inventory_add_book_name_slot"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/inventory_add_book_price_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_add_book_name_topic" />


</androidx.constraintlayout.widget.ConstraintLayout>