<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shopping_cart"
    tools:context=".shop.ItemSelectedActivity">

    <Button
        android:id="@+id/selected_item_proceed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_proceed_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_item_price_slot" />


    <TextView
        android:id="@+id/selected_item_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_header"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/selected_item_name_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selected_item_name_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_name_topic"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/selected_item_name_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_item_header" />

    <EditText
        android:id="@+id/selected_item_name_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_name_slot"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:focusable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/selected_item_price_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_item_name_topic" />

    <TextView
        android:id="@+id/selected_item_price_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_price_topic"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/selected_item_price_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_item_name_slot" />

    <EditText
        android:id="@+id/selected_item_price_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_item_price_slot"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:focusable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/selected_item_proceed_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_item_price_topic" />

</androidx.constraintlayout.widget.ConstraintLayout>