<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment_delete_logout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_payment_delete"
    tools:context=".shop.PaymentDeleteActivity">

    <Button
        android:id="@+id/payment_delete_single_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_delete_single_button"
        app:layout_constraintBottom_toTopOf="@+id/payment_delete_logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_delete_slot" />

    <TextView
        android:id="@+id/payment_delete_topic"
        android:layout_width="220dp"
        android:layout_height="102dp"
        android:text="@string/payment_delete_topic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_delete_slot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/payment_delete_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_delete_slot"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_delete_single_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_delete_topic" />

    <Button
        android:id="@+id/payment_delete_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_delete_logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_delete_single_button" />
</androidx.constraintlayout.widget.ConstraintLayout>